# cxx_rust

./: .gitignore  CMakeLists.txt
rust_logic/: Cargo.toml
rust_logic/src/: ffi.rs  lib.rs  logic.rs  network.rs  response.rs
src/: main.cpp  network.cpp  network.h  response.h  service.cpp  service.h  test_service.cpp
